fix: remove old map spacing

--- a/assets/css/src/parts/terraso.scss
+++ b/assets/css/src/parts/terraso.scss
@@ -135,10 +135,6 @@
 	&.key-funding .wp-block-column + .wp-block-column {
 		margin-left: 20px;
 	}
-
-	.landscape-map {
-		margin-bottom: 40px;
-	}
 }
 
 .slug-faq .entry-content {
